[gd_scene load_steps=2 format=3 uid="uid://ffunwl6pm8km"]

[ext_resource type="Script" uid="uid://csv2ojwn3nq2r" path="res://scripts/choose_didficulty.gd" id="1_8hcq6"]

[node name="Game_dificulty" type="CanvasLayer"]
script = ExtResource("1_8hcq6")

[node name="Game dificulty" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -106.0
offset_right = 59.0
offset_bottom = -83.0
grow_horizontal = 2
grow_vertical = 2
text = "Game Dificulty"

[node name="Easy" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -60.0
offset_right = 26.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 2
text = "Easy"

[node name="Hard" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -15.5
offset_right = 26.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Hard"

[node name="practise" type="Button" parent="."]
offset_left = 557.0
offset_top = 352.0
offset_right = 603.0
offset_bottom = 368.0

[connection signal="pressed" from="Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="Hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="practise" to="." method="_on_practise_pressed"]
